--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>io.spring.platform</groupId>
         <artifactId>platform-bom</artifactId>
-        <version>1.1.4.RELEASE</version>
+        <version>2.0.0.RC1</version>
         <relativePath />
     </parent>
 
@@ -144,14 +144,10 @@
         <infinispan.version>7.2.1.Final</infinispan.version>
         <itextpdf5.version>5.5.5</itextpdf5.version>
         <java.version>1.8</java.version>
-        <jackson.version>2.6.1</jackson.version>
-        <!-- Remove once spring-platform-bom updates to it. -->
         <javaparser.version>2.2.1</javaparser.version>
         <jansi.version>1.11</jansi.version>
         <jawr.version>3.8</jawr.version>
-        <jedis.version>2.7.3</jedis.version>
         <jest.version>0.1.7</jest.version>
-        <!-- remove jedis when boot updates -->
         <jgravatar.version>1.0</jgravatar.version>
         <joda-time.version>2.8.2</joda-time.version>
         <jquery.webjars.version>1.11.2</jquery.webjars.version>
@@ -179,8 +175,6 @@
         <jsitemapgenerator.version>2.1</jsitemapgenerator.version>
         <jsoup.version>1.8.3</jsoup.version>
         <jetty.version>9.3.5.v20151012</jetty.version>
-        <!-- Remove log4j2.version once spring-platform-bom updates to it. -->
-        <log4j2.version>2.4.1</log4j2.version>
         <maven.archetype.plugin.version>2.4</maven.archetype.plugin.version>
         <maven.war.plugin.version>2.4</maven.war.plugin.version>
         <maven.surefire.plugin.version>2.19</maven.surefire.plugin.version>
@@ -238,18 +232,12 @@
         <slick.webjars.version>1.5.0</slick.webjars.version>
         <sockjsclient.webjars.version>1.0.3</sockjsclient.webjars.version>
         <spring-hateoas.version>0.19.0.RELEASE</spring-hateoas.version>
-        <!--spring-social.version>1.1.2.RELEASE</spring-social.version-->
-        <!-- Remove when bom upgrades it -->
-        <!--spring-session.version>1.0.1.RELEASE</spring-session.version-->
         <spring-data-releasetrain.version>Gosling-RELEASE</spring-data-releasetrain.version>
         <spring.test.htmlunit.version>1.0.0.RC1</spring.test.htmlunit.version><!-- test-htmlunit was merged into spring-core 4.2 -->
-        <!-- Remove when bom upgrades it -->
-        <!--spring-loaded.version>1.2.4.RELEASE</spring-loaded.version-->
         <spring-restdocs.version>1.0.0.M1</spring-restdocs.version>
         <supercsv.version>2.4.0</supercsv.version>
         <stripe.api.version>1.37.1</stripe.api.version>
         <stompwebsocket.webjars.version>2.3.4</stompwebsocket.webjars.version>
-        <tomcat.version>8.0.28</tomcat.version>
         <thymeleaf-jawr.version>1.1.1</thymeleaf-jawr.version>
         <wagon.version>2.8</wagon.version>
         <webjars-locator.version>0.28</webjars-locator.version>
@@ -365,6 +353,11 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+			<dependency>
+				<groupId>org.fusesource.jansi</groupId>
+				<artifactId>jansi</artifactId>
+				<version>${jansi.version}</version>
+			</dependency>
             <dependency>
                 <groupId>org.atmosphere</groupId>
                 <artifactId>atmosphere-runtime</artifactId>
