--- a/pom.xml
+++ b/pom.xml
@@ -975,6 +975,7 @@
 					<excludeRoots>
 						<excludeRoot>${project.build.directory}/generated-sources/modello</excludeRoot>
 						<excludeRoot>${project.build.directory}/generated-sources/plugin</excludeRoot>
+            <excludeRoot>${project.build.directory}/generated-sources/annotations</excludeRoot>
 					</excludeRoots>
 				</configuration>
 				<executions>
