--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
   ~ nemesis Platform - NExt-generation Multichannel E-commerce SYStem
@@ -259,6 +260,28 @@
             </releases>
         </repository>
         <repository>
+            <id>nemesis-repository-releases</id>
+            <name>nemesis-repository-releases</name>
+            <url>https://repository.nemesis.io/artifactory/libs-release</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </repository>
+        <repository>
+            <id>nemesis-repository-snapshots</id>
+            <name>nemesis-repository-snapshots</name>
+            <url>https://repository.nemesis.io/artifactory/libs-snapshot</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+        </repository>
+        <repository>
             <id>osgeo</id>
             <name>Open Source Geospatial Foundation Repository</name>
             <url>http://download.osgeo.org/webdav/geotools/</url>
@@ -302,7 +325,19 @@
     </repositories>
     <pluginRepositories>
         <pluginRepository>
-            <id>nemesis-repository</id>
+            <id>nemesis-repository-releases</id>
+            <name>nemesis-repository-releases</name>
+            <url>https://repository.nemesis.io/artifactory/libs-release</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+        </pluginRepository>
+        <pluginRepository>
+            <id>nemesis-repository-snapshots</id>
+            <name>nemesis-repository-snapshots</name>
             <url>https://repository.nemesis.io/artifactory/libs-snapshot</url>
             <snapshots>
                 <enabled>true</enabled>
