--- a/pom.xml
+++ b/pom.xml
@@ -199,6 +199,8 @@
         <maven.pmd.plugin.version>3.5</maven.pmd.plugin.version>
         <maven.pmd.plugin.skip>false</maven.pmd.plugin.skip>
         <maven.rat.plugin.skip>false</maven.rat.plugin.skip>
+        <maven.compiler.anotationl.processor.skip>false</maven.compiler.anotationl.processor.skip>
+        <maven.compiler.test.compile.skip>false</maven.compiler.test.compile.skip>
         <maven.rat.version.plugin>0.11</maven.rat.version.plugin>
         <maven.extraenforcer.version>1.0-beta-2</maven.extraenforcer.version>
         <maven.cargo.plugin>1.4.3</maven.cargo.plugin>
@@ -867,6 +869,18 @@
                         <compilerArgument>-Xlint:unchecked</compilerArgument>
                         <useIncrementalCompilation>false</useIncrementalCompilation>
                     </configuration>
+                    <executions>
+                        <execution>
+                            <id>default-testCompile</id>
+                            <phase>test-compile</phase>
+                            <goals>
+                                <goal>testCompile</goal>
+                            </goals>
+                            <configuration>
+                                <skip>${maven.compiler.test.compile.skip}</skip>
+                            </configuration>
+                        </execution>
+                    </executions>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -1199,6 +1213,7 @@
 				<maven.pmd.plugin.skip>true</maven.pmd.plugin.skip>
 				<maven.findbugs.plugin.skip>true</maven.findbugs.plugin.skip>
 				<maven.rat.plugin.skip>true</maven.rat.plugin.skip>
+				<maven.compiler.test.compile.skip>true</maven.compiler.test.compile.skip>
 			</properties>
 		</profile>
         <profile>
