--- a/pom.xml
+++ b/pom.xml
@@ -335,7 +335,7 @@
                 <enabled>false</enabled>
             </releases>
         </pluginRepository>
-		<pluginRepository>
+		    <pluginRepository>
             <id>nemesis-repository-snapshots</id>
             <name>nemesis-repository-snapshots</name>
             <url>https://repository.nemesis.io/artifactory/libs-snapshot/</url> 
@@ -346,7 +346,7 @@
                 <enabled>false</enabled>
             </releases>
         </pluginRepository>
-		<pluginRepository>
+		    <pluginRepository>
             <id>nemesis-repository-releases</id>
             <name>nemesis-repository-release</name>
             <url>https://repository.nemesis.io/artifactory/libs-release/</url> 
@@ -901,6 +901,11 @@
                         <attributes>
                             <generated>${basedir}/target/asciidoc/generated</generated>
                         </attributes>
+                        <asciidoc>
+                          <requires>
+                            <require>asciidoctor-diagram</require>
+                          </requires>
+                        </asciidoc>
                     </configuration>
                     <dependencies>
                         <dependency>
@@ -909,11 +914,16 @@
                             <version>${asciidoctor.version}</version>
                         </dependency>
                         <dependency>
+                            <groupId>org.asciidoctor</groupId>
+                            <artifactId>asciidoctorj-diagram</artifactId>
+                            <version>1.3.1</version>
+                        </dependency>
+                        <dependency>
                             <groupId>org.apache.maven.wagon</groupId>
                             <artifactId>wagon-ssh</artifactId>
                             <version>${wagon.version}</version>
                         </dependency>
-						<dependency>
+						            <dependency>
                             <groupId>org.apache.maven.wagon</groupId>
                             <artifactId>wagon-ssh-common</artifactId>
                             <version>${wagon.version}</version>
