--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,7 @@
         <itextpdf5.version>5.5.5</itextpdf5.version>
         <java.version>1.8</java.version>
         <javamoney.version>1.0</javamoney.version>
+        <jackson-datatype-money.version>0.7.0-SNAPSHOT</jackson-datatype-money.version>
         <javaparser.version>2.2.1</javaparser.version>
         <jansi.version>1.11</jansi.version>
         <jawr.version>3.8</jawr.version>
@@ -804,12 +805,11 @@
                 <artifactId>xalan</artifactId>
                 <version>${xalan.version}</version>
             </dependency>
-            <dependency>
-                <groupId>com.fasterxml.jackson.datatype</groupId>
-                <artifactId>jackson-datatype-hibernate5</artifactId>
-                <version>${jackson.version}</version>
-                <!-- remove once spring platform upgrades it. -->
-            </dependency>
+			<dependency>
+				<groupId>org.zalando</groupId>
+				<artifactId>jackson-datatype-money</artifactId>
+				<version>${jackson-datatype-money.version}</version>
+			</dependency>
             <dependency>
                 <groupId>com.nemesis.platform</groupId>
                 <artifactId>nemesis-platform-core</artifactId>
