--- a/pom.xml
+++ b/pom.xml
@@ -186,7 +186,7 @@
         <maven.compiler.plugin.version>3.3</maven.compiler.plugin.version>
         <maven.coveralls.plugin.version>3.1.0</maven.coveralls.plugin.version>
         <maven.jar.plugin.version>2.4</maven.jar.plugin.version>
-        <maven.jacoco.plugin.version>0.7.2.201409121644</maven.jacoco.plugin.version>
+        <maven.jacoco.plugin.version>0.7.5.201505241946</maven.jacoco.plugin.version>
         <maven.site.plugin.version>3.4</maven.site.plugin.version>
         <maven.failsafe.plugin.version>2.19</maven.failsafe.plugin.version>
         <maven.enforcer.plugin.version>1.3.1</maven.enforcer.plugin.version>
@@ -1261,7 +1261,7 @@
             </properties>
             <build>
                 <plugins>
-                    <!--plugin>
+                    <plugin>
                         <groupId>org.jacoco</groupId>
                         <artifactId>jacoco-maven-plugin</artifactId>
                         <version>${maven.jacoco.plugin.version}</version>
@@ -1323,7 +1323,7 @@
                                 </configuration>
                             </execution>
                         </executions>
-                    </plugin-->
+                    </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
