update spring session version

--- a/pom.xml
+++ b/pom.xml
@@ -238,6 +238,7 @@
         <sockjsclient.webjars.version>1.0.3</sockjsclient.webjars.version>
         <!--spring.cloud.version>Brixton.M2</spring.cloud.version-->
         <!--spring-data-releasetrain.version>Gosling-RELEASE</spring-data-releasetrain.version-->
+        <spring-session.version>1.1.0.M1</spring-session.version>
         <supercsv.version>2.4.0</supercsv.version>
         <stripe.api.version>1.37.1</stripe.api.version>
         <stompwebsocket.webjars.version>2.3.4</stompwebsocket.webjars.version>
