[maven-release-plugin] prepare release 0.9

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
     <groupId>com.nemesis</groupId>
     <artifactId>bom</artifactId>
-    <version>0.9-SNAPSHOT</version>
+    <version>0.9</version>
     <packaging>pom</packaging>
 
     <name>Nemesis BOM</name>
@@ -82,7 +82,7 @@
         <connection>scm:git:https://github.com/nemesis-software/nemesis-bom.git</connection>
         <developerConnection>scm:git:https://github.com/nemesis-software/nemesis-bom.git</developerConnection>
         <url>https://github.com/nemesis-software/nemesis-bom.git</url>
-      <tag>HEAD</tag>
+      <tag>0.9</tag>
     </scm>
     <issueManagement>
         <system>Github</system>
@@ -913,8 +913,8 @@
 							</requires>
 							<attributes>
 								<doctype>book</doctype>
-								<sectanchors></sectanchors>
-								<sectlinks></sectlinks>
+								<sectanchors />
+								<sectlinks />
 								<icons>font</icons>
 								<source-highlighter>coderay</source-highlighter>
 								<coderay-css>style</coderay-css>
